# wave-synth

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
modules/: CMakeLists.txt
res/: CMakeLists.txt
scripts/: mac_builds.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  Plugin_Editor.cpp  Plugin_Editor.h  Wave_Synth.cpp  Wave_Synth.h  pch.h
src/dsp/: AR_Envelope.h  DC_Blocker.h  Diode_Clipper.h  Diode_Rectifier.h  LC_Oscillator.h  Phaser.h  Sallen_Key_Filter.h
